--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/gustavoroc/oop-typescript/issues"
   },
-  "homepage": "https://github.com/gustavoroc/oop-typescript#readme"
+  "homepage": "https://github.com/gustavoroc/oop-typescript",
+  "devDependencies": {
+    "typescript": "^4.9.4"
+  }
 }
