--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Desafio para testar conhecimentos de orientacao a objetos com typescript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
