--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/gustavoroc/oop-typescript",
   "devDependencies": {
+    "prettier": "^2.8.1",
     "typescript": "^4.9.4"
   }
 }
